--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body 
 {
-    background-color: #707070;
+    background-color: #00399b;
 }
 
 #title 
@@ -10,7 +10,7 @@ body
     margin: 2% 5%;
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 #loginDiv
@@ -19,7 +19,16 @@ body
     width: 70%;
     margin-left: 15%;
     padding: 25px;
-    background-color: #b2b2b2;
+    background-color: #5698fa;
+}
+
+#signupDiv
+{
+    font-size: 30px;
+    width: 70%;
+    margin-left: 15%;
+    padding: 25px;
+    background-color: #5698fa;
 }
 
 #loggedInDiv
@@ -28,7 +37,7 @@ body
     width: 70%;
     margin-left: 15%;
     padding: 25px;
-    background-color: #b2b2b2;
+    background-color: #ffffff;
 }
 
 #accessUIDiv
@@ -50,7 +59,7 @@ body
 }
 
 .buttons:hover{
-    background-color: #00d5124f;
+    background-color: #9e9e9ea7;
     color: #FFFFFF;
     opacity: 50%;
 }
