--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body 
 {
-    background-color: #707070;
+    background-color: #00399b;
 }
 
 #title 
@@ -9,8 +9,8 @@ body
     width: 100%;
     margin: 2% 5%;
     text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-    color: #FFFFFF;
+    font-family: 'Audiowide', sans-serif;
+    color: #ffffff;
 }
 
 #loginDiv
@@ -19,7 +19,16 @@ body
     width: 70%;
     margin-left: 15%;
     padding: 25px;
-    background-color: #b2b2b2;
+    background-color: #5698fa;
+}
+
+#signupDiv
+{
+    font-size: 30px;
+    width: 70%;
+    margin-left: 15%;
+    padding: 25px;
+    background-color: #5698fa;
 }
 
 #loggedInDiv
@@ -28,7 +37,7 @@ body
     width: 70%;
     margin-left: 15%;
     padding: 25px;
-    background-color: #b2b2b2;
+    background-color: #ffffff;
 }
 
 #accessUIDiv
@@ -46,22 +55,30 @@ body
     border-radius: 25px;
     width: 50%;
     margin-left: 25%;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Audiowide', sans-serif;
 }
 
 .buttons:hover{
-    background-color: #00d5124f;
+    background-color: #9e9e9ea7;
     color: #FFFFFF;
     opacity: 50%;
 }
 
 #loginName
 {
-	font-size: 30px;
+	font-size: 25px;
 }
 #loginPassword
 {
-	font-size: 30px;
+	font-size: 25px;
+}
+#signupName
+{
+	font-size: 25px;
+}
+#signupPassword
+{
+	font-size: 25px;
 }
 #searchText
 {
@@ -78,7 +95,7 @@ input[type="text"],input[type="password"]{
     width: 80%;
     margin-left: 10%;
     margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Audiowide', sans-serif;
 }
 
 #inner-title{
@@ -88,7 +105,7 @@ input[type="text"],input[type="password"]{
     text-align: center;
     margin-left: 5%;
     margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Audiowide', sans-serif;
     color: #95060a;
 }
 
@@ -99,7 +116,7 @@ input[type="text"],input[type="password"]{
     text-align: center;
     margin-left: 5%;
     margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Audiowide', sans-serif;
     color: #95060a;
 }
 
@@ -120,7 +137,7 @@ select{
     margin-left: 35%;
     margin-top: 2%;
     font-size: 0.75em;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Audiowide', sans-serif;
 }
 
 #colorSearchResult{
@@ -135,6 +152,6 @@ select{
     margin-left: 5%;
     margin-top: 2%;
     margin-bottom: 1%;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Audiowide', sans-serif;
     color: #95060a;
 }
